--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -13,9 +13,9 @@ h1 {
   width: 90%;
 
 
-  
-  margin-right: auto;
-  margin-left: auto;
+  margin: 10px;
+  /*margin-right: auto;
+  margin-left: auto;*/
   font-family: Helvetica;
   color: black;
   
@@ -124,7 +124,7 @@ h1 {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 47%;
   }
   .col-md-7 {
     width: 58.33%;
