--- a/CSS/mystyle.css
+++ b/CSS/mystyle.css
@@ -10,7 +10,7 @@ h1 {
 .content {
   border: 1px solid black;
   background-color: #B2BABB;
-  width: 90%;
+  
 
 
   margin: 10px;
@@ -22,6 +22,8 @@ h1 {
   
 
   margin-bottom: 30px;
+  
+  position: relative;
   
   
 
@@ -124,7 +126,7 @@ h1 {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 47%;
+    width: 50%;
   }
   .col-md-7 {
     width: 58.33%;
